# SAR-system

./: .env.example  .gitignore  CLAUDE.md  README.md  SAR_project_plan.md  build_plan.md  check_setup.py  core_loop.md  kickoff.md  requirements.txt  setup.cfg
dashboard/: .env  index.html  package-lock.json
dashboard_app/: README.md  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
deepgram-voice-agent-inbound-telephony/: .gitignore  README.md  config.py  dev_client.py  fly.toml  log_bridge.py  main.py  requirements-dev.txt  send_test_sms.py  setup.py
detector/: .gitignore  pyproject.toml
detector/configs/datasets/: wizard_thermal_person.yaml
detector/scripts/: download_hit_uav.sh  train_hit_uav.sh  train_hit_uav_cpu_quick.sh
detector/src/sar_demo/: __init__.py
docs/: DATASETS.md  brain_followups.md  data.md  demo_scenario.md  geo_detector_integration.md  integration-kickoff.md  interfaces.md  prior_model.md  tech_and_sponsors.md  tech_stack.md
integration/: __init__.py  backends.py  broadcast.py  dashboard_projection.py  deepgram_tts.py  detector_adapter.py  loop.py  map_render.py  observability.py  server.py  telemetry.py  terrain_render.py
notebooks/: train_hit_uav_kaggle.ipynb
prep/: brain.md  georeferencer.md
scripts/: make_hit_uav_test_video.py  run_demo.sh  run_rgb_demo.sh  train_rgb.sh  train_thermal.sh
tests/: test_broadcast.py  test_contracts.py  test_deepgram_tts.py  test_detector_sim.py  test_geo.py  test_geo_integration.py  test_grid.py  test_guide_home.py  test_integration_detector_adapter.py  (+11 more)
(+71 files in other folders)
