[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sar-drone-demo"
version = "0.1.0"
description = "Drone footage search-and-rescue YOLO fine-tuning and inference demo"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
